--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 													<div class="h-items">
 														<div class="h-item y-h" style="left:3%; animation-delay:0.3s">
 															<div class="inner">
-																<div class="h-title" aria-label="Project1 and " data-balloon-pos="up">
+																<div class="h-title" aria-label="Jewelry Design" data-balloon-pos="up">
 																	What is Chinese Design?
 																</div>
 																<div class="h-desc"></div>
@@ -137,7 +137,7 @@
 														</div>
 														<div class="h-item y-l" style="left:18%; animation-delay:0.36s">
 															<div class="inner">
-																<div class="h-title" aria-label="Project2 and " data-balloon-pos="up">
+																<div class="h-title" aria-label="SmartTV Design" data-balloon-pos="up">
 																	What Is Design?
 																</div>
 																<div class="h-desc"></div>
@@ -145,7 +145,7 @@
 														</div>
 														<div class="h-item y-h" style="left:33%; animation-delay:0.36s">
 															<div class="inner">
-																<div class="h-title" aria-label="Project2 and " data-balloon-pos="up">
+																<div class="h-title" aria-label="Pick-up Service" data-balloon-pos="up">
 																	Design Is an Integration.
 																</div>
 																<div class="h-desc"></div>
@@ -153,7 +153,7 @@
 														</div>
 														<div class="h-item y-l" style="left:48%; animation-delay:0.36s">
 															<div class="inner">
-																<div class="h-title" aria-label="Project2 and " data-balloon-pos="up">
+																<div class="h-title" aria-label="Currently Working On" data-balloon-pos="up">
 																	Design Is Nudge.
 																</div>
 																<div class="h-desc"></div>
