--- a/Jewelry.html
+++ b/Jewelry.html
@@ -51,7 +51,7 @@
 				  <a href="Badge.html">Badge </a>
 				</div>
 				<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-				<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+				<a class="icon" onclick="myFunction()">
 				  <i class="fa fa-bars"></i>
 				</a>
 			  </div>
