--- a/Badge.html
+++ b/Badge.html
@@ -40,6 +40,10 @@
 	
 	<main>
 		<div class="main">
+
+			<a class="skip-to-content-link" href="#main">
+				Skip to content
+			  </a>
 			<!-- mobile hamburgerbar  -->
 			<div class="topnav">
 				<a  class="active" href="index.html">Ma</a>
