--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 	
 	<main>
 		<div class="main">
+
+			<a class="skip-to-content-link" href="#main">
+				Skip to content
+			  </a>
+			  
 			<!-- mobile hamburgerbar  -->
 			<div class="topnav">
 				<a  class="active" href="index.html">Ma</a>
