--- a/Badge.html
+++ b/Badge.html
@@ -29,7 +29,7 @@
 	gtag('config', 'G-EQPRP1PKE2');
 	</script>
 
-	<title>Claudius' Portfolio</title>
+	<title>Winter Olympic</title>
 </head>
 
 <body>
