--- a/CU.html
+++ b/CU.html
@@ -30,7 +30,7 @@
 	gtag('config', 'G-EQPRP1PKE2');
 	</script>
 
-	<title>Claudius' Portfolio</title>
+	<title>Pick-up Service</title>
 </head>
 
 <body>
