--- a/Badge.html
+++ b/Badge.html
@@ -99,7 +99,7 @@
 					</div>
 				</div>
 			</header>
-			<div class="section content">
+			<div id = "main" class="section content">
 				<div class="inner">
 					<article class="item page-item">
 						<div class="inner">
