--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			</header>
 
 	
-			<div class="section content">
+			<div id = "main" class="section content">
 				<!-- name two classes in one element -->
 				<div class="inner">
 					<article class="item page-item">
