--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 				  <a href="TCL.html">Smart TV</a>
 				  <a href="Jewelry.html">Jewelry </a>
 				  <a href="Badge.html">Badge </a>
+				  <a href="CU.html">Pickup</a>
 				</div>
 				<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
 				<a class="icon" onclick="myFunction()">
