--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	gtag('config', 'G-EQPRP1PKE2');
 	</script>
 
-		<title>Claudius' Portfolio</title>
+	<title>Claudius' Portfolio</title>
 </head>
 
 <body>
@@ -117,12 +117,13 @@
 											<div class="inner">
 												<div class="summary-desc">
 													<p>
-														In the long history of China, the ancient Chinese contributed many innovations to the world, such as papermaking, gunpowder, and porcelain. But now, Chinese products are always linked with “fake” . It is my passion and duty to alter this history and do something to change the stereotype about our community.  (That is the reason I started my inquiry with the first question: What is Chinese design?)
+														I am obsessed with experimentation. My friends say I am always coming up with hypotheses–even about our daily lives and relationships. This serves me well as a product person, because I always come up with a question and find the solution through experimentation. 
 
 													</p>
 													<br>
 													<p>
-														In the process of exploration, I gradually discovered that the symbols of ancient culture were based on feudal monarchy, and their design objects were often aimed at the royal family. Ancient Chinese designs should not be used to form the symbolic style of modern China. Modern China must discover its own design for its own era. As the design should represent the current challenges that the modern world faces, I start to further discover modern design.
+														The products I made are generally incubated in the process of testing hypotheses, and the answers to my question are presented by the work I made during the process of inquiry. In the past five years I have asked two questions, made three hypotheses, and have made real impacts on my community. 
+
 
 													</p>
 												</div>
