--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="main">
 
 			<a class="skip-to-content-link" href="#main">
-				Skip to content
+				Skip to content!
 			  </a>
 			  
 			<!-- mobile hamburgerbar  -->
