my_intro updated

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 						</a>
 					</div>
 					<div class="My_Intro">
-						I am Chuxuan(Claudius) Ma, a multidisciplinary designer.
+						<p>I am Chuxuan(Claudius) Ma</p>
+						<p>a multidisciplinary designer.</p>
 					</div>
 					<div class="nav">
 						<ul>
@@ -117,7 +118,7 @@
 											<div class="inner">
 												<div class="summary-desc">
 													<p>
-														I am obsessed with experimentation. My friends say I am always coming up with hypotheses–even about our daily lives and relationships. This serves me well as a product person, because I always come up with a question and find the solution through experimentation. 
+														I am obsessed with experimentation. My friends say I am always coming up with hypotheses-even about our daily lives and relationships. This serves me well as a product person, because I always come up with a question and find the solution through experimentation. 
 
 													</p>
 													<br>
