--- a/Badge.html
+++ b/Badge.html
@@ -6,7 +6,7 @@
 
 	<meta name="author" content="Chuxuan Claudius Ma">
 	<meta name="description" content="A Design Portfolio that records Claudius' past work and also his passion on social change.">
-	<meta name="theme-color" content="#C85C5C">
+	<meta name="theme-color" content="#D05A6E">
 
 	<link rel="icon" href="imgs/favicon.ico">
 	<!-- 16 32 96 & apple touch need to be updated-->
