--- a/index.html
+++ b/index.html
@@ -75,158 +75,133 @@
 
 
 			<header class="header">
-				<div class="inner">
-					<div class="photo">
-						<a href="index.html" aria-label=" Keep Smiling Claudius 😃 " data-balloon-pos="down" >
-							<img src="imgs/My_photo.png" alt="Me">
-						</a>
-					</div>
-					<div class="My_Intro">
-						<p>I am Chuxuan(Claudius) Ma</p>
-						<p>a multidisciplinary designer.</p>
-					</div>
-					<div class="nav">
-						<ul>
-							<li class="nav_label">About Me</li>
-							<li class="side_link"><a  class="current" href = "index.html">故事&nbsp;My Story</a></li>
-							<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
-							<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
-	
-							<li class="nav_label">Past Work</li>
-							<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
-							<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
-							<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
-							<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
-						</ul>
-	
-					</div>
+				<div class="photo">
+					<a href="index.html" aria-label=" Keep Smiling Claudius 😃 " data-balloon-pos="down" >
+						<img src="imgs/My_photo.png" alt="Me">
+					</a>
 				</div>
+				<div class="My_Intro">
+					<p>I am Chuxuan(Claudius) Ma</p>
+					<p>a multidisciplinary designer.</p>
+				</div>
+				<div class="nav">
+					<ul>
+						<li class="nav_label">About Me</li>
+						<li class="side_link"><a  class="current" href = "index.html">故事&nbsp;My Story</a></li>
+						<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
+						<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
+
+						<li class="nav_label">Past Work</li>
+						<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
+						<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
+						<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
+						<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
+					</ul>
+				</div>	
 			</header>
 
 	
-			<div id = "main" class="section content">
-				<!-- name two classes in one element -->
-				<div class="inner">
-					<article class="item page-item">
-						<div class="inner">
-							<div class="item-main">
-								<div class="item-desc text">
-									<h1>My Story</h1>
-									<div class="summaries" id="summaries">
-										<!-- Neeed to figure out java for x-data -->
-										<div class="summary overall">
-											<div class="inner">
-												<div class="summary-desc">
-													<p>
-														I am obsessed with experimentation. My friends say I am always coming up with hypotheses-even about our daily lives and relationships. This serves me well as a product person, because I always come up with a question and find the solution through experimentation. 
+			<div class="content">
+				<article class="overview">
+					<div class="item-desc text">
+						<h1>My Story</h1>
+						<div class="summaries" id="summaries">
+							<!-- Neeed to figure out java for x-data -->
+							<div class="summary overall">
+								<div class="inner">
+									<div class="summary-desc">
+										<p>
+											I am obsessed with experimentation. My friends say I am always coming up with hypotheses-even about our daily lives and relationships. This serves me well as a product person, because I always come up with a question and find the solution through experimentation. 
 
-													</p>
-													<br>
-													<p>
-														The products I made are generally incubated in the process of testing hypotheses, and the answers to my question are presented by the work I made during the process of inquiry. In the past five years I have asked two questions, made three hypotheses, and have made real impacts on my community. 
+										</p>
+										<br>
+										<p>
+											The products I made are generally incubated in the process of testing hypotheses, and the answers to my question are presented by the work I made during the process of inquiry. In the past five years I have asked two questions, made three hypotheses, and have made real impacts on my community. 
 
 
-													</p>
-												</div>
-											</div>
-										</div>
-
-										<div class="summary history" id="history">
-											<div class="inner">
-												<div class="summary-desc">
-													<div class="h-items">
-														<div class="h-item y-h" style="left:3%; animation-delay:0.3s">
-															<div class="inner">
-																<div class="h-title" aria-label="Jewelry Design" data-balloon-pos="up">
-																	What is Chinese Design?
-																</div>
-																<div class="h-desc"></div>
-															</div>
-														</div>
-														<div class="h-item y-l" style="left:18%; animation-delay:0.36s">
-															<div class="inner">
-																<div class="h-title" aria-label="SmartTV Design" data-balloon-pos="up">
-																	What Is Design?
-																</div>
-																<div class="h-desc"></div>
-															</div>
-														</div>
-														<div class="h-item y-h" style="left:33%; animation-delay:0.36s">
-															<div class="inner">
-																<div class="h-title" aria-label="Pick-up Service" data-balloon-pos="up">
-																	Design Is an Integration.
-																</div>
-																<div class="h-desc"></div>
-															</div>
-														</div>
-														<div class="h-item y-l" style="left:48%; animation-delay:0.36s">
-															<div class="inner">
-																<div class="h-title" aria-label="Currently Working On" data-balloon-pos="up">
-																	Design Is Nudge.
-																</div>
-																<div class="h-desc"></div>
-															</div>
-														</div>
-													</div>
-													<div class="h-axis"></div>
-													<div class="h-bottom">
-														<div class="h-year" style="left:3%; animation-delay:0.48s">
-															<div class="h-year-title">2018</div> 
-														</div>
-														<div class="h-year" style="left:18%; animation-delay:0.48s">
-															<div class="h-year-title">2019</div> 
-														</div>
-														<div class="h-year" style="left:33%; animation-delay:0.48s">
-															<div class="h-year-title">2020</div> 
-														</div>
-														<div class="h-year" style="left:48%; animation-delay:0.48s">
-															<div class="h-year-title">2021</div> 
-														</div>
-														<div class="h-year" style="left:63%; animation-delay:0.48s">
-															<div class="h-year-title">2022</div> 
-														</div>
-														<div class="h-year" style="left:78%; animation-delay:0.48s">
-															<div class="h-year-title">2023</div> 
-														</div>
-														</div>
-													</div>
-											</div>
-										</div>
-										<div class="summary projects">
-											<div class="inner">
-												<div class="product-container">
-													<div id="TCL_Cover"><a href="TCL.html"><img src="imgs/TCL_Cover.png" alt="TCL_Cover"></a></div>
-													<div id="Jewelry_Cover"><a href="Jewelry.html"><img src="imgs/Jewelry_Cover.png" alt="Jewelry_Cover"></a></div>
-													<div id="Badge_Cover"><a href="Badge.html"><img src="imgs/Badge_Cover.jpg" alt="Badge_Cover"></a></div>
-													<div id="CU_Cover"><a href="CU.html"><img src="imgs/CU_Cover.png" alt="CU_Cover"></a></div>
-												</div>
-
-											</div>
-											
-											<!-- <div class="inner">
-												<div class="project_1">
-													something here
-												</div>
-												<div class="project_2">
-													something here
-												</div>
-												<div class="project_3">
-													something here
-												</div>
-												<div class="project_4">
-													something here
-												</div>
-											</div> -->
-										</div>
-
-
-
+										</p>
 									</div>
 								</div>
 							</div>
+
+							<div class="summary history" id="history">
+								<div class="inner">
+									<div class="summary-desc">
+										<div class="h-items">
+											<div class="h-item y-h" style="left:3%; animation-delay:0.3s">
+												<div class="inner">
+													<div class="h-title" aria-label="Jewelry Design" data-balloon-pos="up">
+														What is Chinese Design?
+													</div>
+													<div class="h-desc"></div>
+												</div>
+											</div>
+											<div class="h-item y-l" style="left:18%; animation-delay:0.36s">
+												<div class="inner">
+													<div class="h-title" aria-label="SmartTV Design" data-balloon-pos="up">
+														What Is Design?
+													</div>
+													<div class="h-desc"></div>
+												</div>
+											</div>
+											<div class="h-item y-h" style="left:33%; animation-delay:0.36s">
+												<div class="inner">
+													<div class="h-title" aria-label="Pick-up Service" data-balloon-pos="up">
+														Design Is an Integration.
+													</div>
+													<div class="h-desc"></div>
+												</div>
+											</div>
+											<div class="h-item y-l" style="left:48%; animation-delay:0.36s">
+												<div class="inner">
+													<div class="h-title" aria-label="Currently Working On" data-balloon-pos="up">
+														Design Is Nudge.
+													</div>
+													<div class="h-desc"></div>
+												</div>
+											</div>
+										</div>
+										<div class="h-axis"></div>
+										<div class="h-bottom">
+											<div class="h-year" style="left:3%; animation-delay:0.48s">
+												<div class="h-year-title">2018</div> 
+											</div>
+											<div class="h-year" style="left:18%; animation-delay:0.48s">
+												<div class="h-year-title">2019</div> 
+											</div>
+											<div class="h-year" style="left:33%; animation-delay:0.48s">
+												<div class="h-year-title">2020</div> 
+											</div>
+											<div class="h-year" style="left:48%; animation-delay:0.48s">
+												<div class="h-year-title">2021</div> 
+											</div>
+											<div class="h-year" style="left:63%; animation-delay:0.48s">
+												<div class="h-year-title">2022</div> 
+											</div>
+											<div class="h-year" style="left:78%; animation-delay:0.48s">
+												<div class="h-year-title">2023</div> 
+											</div>
+											</div>
+										</div>
+								</div>
+							</div>
+							<div class="summary projects">
+								<div class="inner">
+									<div class="product-container">
+										<div id="TCL_Cover"><a href="TCL.html"><img src="imgs/TCL_Cover.png" alt="TCL_Cover"></a></div>
+										<div id="Jewelry_Cover"><a href="Jewelry.html"><img src="imgs/Jewelry_Cover.png" alt="Jewelry_Cover"></a></div>
+										<div id="Badge_Cover"><a href="Badge.html"><img src="imgs/Badge_Cover.jpg" alt="Badge_Cover"></a></div>
+										<div id="CU_Cover"><a href="CU.html"><img src="imgs/CU_Cover.png" alt="CU_Cover"></a></div>
+									</div>
+
+								</div>
+							</div>
+
+
+
 						</div>
-					</article>		
-				</div>
+					</div>
+				</article>		
 			</div>
 		</div>
 	
