--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 	
 
 			<div class="overview">
-				<div class="item-desc text">
+				<div class="content">
 					<h1>My Story</h1>
-					<div class="summaries" id="summaries">
+					<div class="summaries">
 						<!-- Neeed to figure out java for x-data -->
 						<div class="summary overall">
 							<div class="inner">
