--- a/index.html
+++ b/index.html
@@ -105,100 +105,89 @@
 			<div class="overview">
 				<div class="content">
 					<h1>My Story</h1>
-					<div class="summaries">
-						<!-- Neeed to figure out java for x-data -->
-						<div class="summary overall">
-							<div class="inner">
-								<div class="summary-desc">
-									<p>
-										I am obsessed with experimentation. My friends say I am always coming up with hypotheses-even about our daily lives and relationships. This serves me well as a product person, because I always come up with a question and find the solution through experimentation. 
-
-									</p>
-									<br>
-									<p>
-										The products I made are generally incubated in the process of testing hypotheses, and the answers to my question are presented by the work I made during the process of inquiry. In the past five years I have asked two questions, made three hypotheses, and have made real impacts on my community. 
-
-
-									</p>
-								</div>
-							</div>
+					<div class="summary">
+						<div class="summary-desc">
+							<p>
+								I am obsessed with experimentation. My friends say I am always coming up with hypotheses-even about our daily lives and relationships. This serves me well as a product person, because I always come up with a question and find the solution through experimentation. 
+							</p>
+							<br>
+							<p>
+								The products I made are generally incubated in the process of testing hypotheses, and the answers to my question are presented by the work I made during the process of inquiry. In the past five years I have asked two questions, made three hypotheses, and have made real impacts on my community. 
+							</p>
 						</div>
+					</div>
 
-						<div class="summary history" id="history">
-							<div class="inner">
-								<div class="summary-desc">
-									<div class="h-items">
-										<div class="h-item y-h" style="left:3%; animation-delay:0.3s">
-											<div class="inner">
-												<div class="h-title" aria-label="Jewelry Design" data-balloon-pos="up">
-													What is Chinese Design?
-												</div>
-												<div class="h-desc"></div>
+					<div class="summary history" id="history">
+						<div class="inner">
+							<div class="summary-desc">
+								<div class="h-items">
+									<div class="h-item y-h" style="left:3%; animation-delay:0.3s">
+										<div class="inner">
+											<div class="h-title" aria-label="Jewelry Design" data-balloon-pos="up">
+												What is Chinese Design?
 											</div>
-										</div>
-										<div class="h-item y-l" style="left:18%; animation-delay:0.36s">
-											<div class="inner">
-												<div class="h-title" aria-label="SmartTV Design" data-balloon-pos="up">
-													What Is Design?
-												</div>
-												<div class="h-desc"></div>
-											</div>
-										</div>
-										<div class="h-item y-h" style="left:33%; animation-delay:0.36s">
-											<div class="inner">
-												<div class="h-title" aria-label="Pick-up Service" data-balloon-pos="up">
-													Design Is an Integration.
-												</div>
-												<div class="h-desc"></div>
-											</div>
-										</div>
-										<div class="h-item y-l" style="left:48%; animation-delay:0.36s">
-											<div class="inner">
-												<div class="h-title" aria-label="Currently Working On" data-balloon-pos="up">
-													Design Is Nudge.
-												</div>
-												<div class="h-desc"></div>
-											</div>
+											<div class="h-desc"></div>
 										</div>
 									</div>
-									<div class="h-axis"></div>
-									<div class="h-bottom">
-										<div class="h-year" style="left:3%; animation-delay:0.48s">
-											<div class="h-year-title">2018</div> 
-										</div>
-										<div class="h-year" style="left:18%; animation-delay:0.48s">
-											<div class="h-year-title">2019</div> 
-										</div>
-										<div class="h-year" style="left:33%; animation-delay:0.48s">
-											<div class="h-year-title">2020</div> 
-										</div>
-										<div class="h-year" style="left:48%; animation-delay:0.48s">
-											<div class="h-year-title">2021</div> 
-										</div>
-										<div class="h-year" style="left:63%; animation-delay:0.48s">
-											<div class="h-year-title">2022</div> 
-										</div>
-										<div class="h-year" style="left:78%; animation-delay:0.48s">
-											<div class="h-year-title">2023</div> 
-										</div>
+									<div class="h-item y-l" style="left:18%; animation-delay:0.36s">
+										<div class="inner">
+											<div class="h-title" aria-label="SmartTV Design" data-balloon-pos="up">
+												What Is Design?
+											</div>
+											<div class="h-desc"></div>
 										</div>
 									</div>
-							</div>
-						</div>
-						<div class="summary projects">
-							<div class="inner">
-								<div class="product-container">
-									<div id="TCL_Cover"><a href="TCL.html"><img src="imgs/TCL_Cover.png" alt="TCL_Cover"></a></div>
-									<div id="Jewelry_Cover"><a href="Jewelry.html"><img src="imgs/Jewelry_Cover.png" alt="Jewelry_Cover"></a></div>
-									<div id="Badge_Cover"><a href="Badge.html"><img src="imgs/Badge_Cover.jpg" alt="Badge_Cover"></a></div>
-									<div id="CU_Cover"><a href="CU.html"><img src="imgs/CU_Cover.png" alt="CU_Cover"></a></div>
+									<div class="h-item y-h" style="left:33%; animation-delay:0.36s">
+										<div class="inner">
+											<div class="h-title" aria-label="Pick-up Service" data-balloon-pos="up">
+												Design Is an Integration.
+											</div>
+											<div class="h-desc"></div>
+										</div>
+									</div>
+									<div class="h-item y-l" style="left:48%; animation-delay:0.36s">
+										<div class="inner">
+											<div class="h-title" aria-label="Currently Working On" data-balloon-pos="up">
+												Design Is Nudge.
+											</div>
+											<div class="h-desc"></div>
+										</div>
+									</div>
 								</div>
-
-							</div>
+								<div class="h-axis"></div>
+								<div class="h-bottom">
+									<div class="h-year" style="left:3%; animation-delay:0.48s">
+										<div class="h-year-title">2018</div> 
+									</div>
+									<div class="h-year" style="left:18%; animation-delay:0.48s">
+										<div class="h-year-title">2019</div> 
+									</div>
+									<div class="h-year" style="left:33%; animation-delay:0.48s">
+										<div class="h-year-title">2020</div> 
+									</div>
+									<div class="h-year" style="left:48%; animation-delay:0.48s">
+										<div class="h-year-title">2021</div> 
+									</div>
+									<div class="h-year" style="left:63%; animation-delay:0.48s">
+										<div class="h-year-title">2022</div> 
+									</div>
+									<div class="h-year" style="left:78%; animation-delay:0.48s">
+										<div class="h-year-title">2023</div> 
+									</div>
+									</div>
+								</div>
 						</div>
+					</div>
+					<div class="summary projects">
+						<div class="inner">
+							<div class="product-container">
+								<div id="TCL_Cover"><a href="TCL.html"><img src="imgs/TCL_Cover.png" alt="TCL_Cover"></a></div>
+								<div id="Jewelry_Cover"><a href="Jewelry.html"><img src="imgs/Jewelry_Cover.png" alt="Jewelry_Cover"></a></div>
+								<div id="Badge_Cover"><a href="Badge.html"><img src="imgs/Badge_Cover.jpg" alt="Badge_Cover"></a></div>
+								<div id="CU_Cover"><a href="CU.html"><img src="imgs/CU_Cover.png" alt="CU_Cover"></a></div>
+							</div>
 
-
-
+						</div>
 					</div>
 				</div>
 			</div>		
