--- a/index.html
+++ b/index.html
@@ -115,67 +115,60 @@
 						</p>
 					</div>
 
-					<div class="summary history" id="history">
+					<div class="history">
 						<div class="inner">
-							<div class="summary-desc">
-								<div class="h-items">
-									<div class="h-item y-h" style="left:3%; animation-delay:0.3s">
-										<div class="inner">
-											<div class="h-title" aria-label="Jewelry Design" data-balloon-pos="up">
-												What is Chinese Design?
-											</div>
-											<div class="h-desc"></div>
-										</div>
+							<div class="h-items">
+								<div class="h-item y-h" style="left:3%; animation-delay:0.36s">
+									<div class="h-title" aria-label="Jewelry Design" data-balloon-pos="up">
+										Design is for culture.
 									</div>
-									<div class="h-item y-l" style="left:18%; animation-delay:0.36s">
-										<div class="inner">
-											<div class="h-title" aria-label="SmartTV Design" data-balloon-pos="up">
-												What Is Design?
-											</div>
-											<div class="h-desc"></div>
-										</div>
-									</div>
-									<div class="h-item y-h" style="left:33%; animation-delay:0.36s">
-										<div class="inner">
-											<div class="h-title" aria-label="Pick-up Service" data-balloon-pos="up">
-												Design Is an Integration.
-											</div>
-											<div class="h-desc"></div>
-										</div>
-									</div>
-									<div class="h-item y-l" style="left:48%; animation-delay:0.36s">
-										<div class="inner">
-											<div class="h-title" aria-label="Currently Working On" data-balloon-pos="up">
-												Design Is Nudge.
-											</div>
-											<div class="h-desc"></div>
-										</div>
-									</div>
+									<div class="h-desc"></div>
 								</div>
-								<div class="h-axis"></div>
-								<div class="h-bottom">
-									<div class="h-year" style="left:3%; animation-delay:0.48s">
-										<div class="h-year-title">2018</div> 
+								<div class="h-item y-l" style="left:18%; animation-delay:0.36s">
+									<div class="h-title" aria-label="SmartTV Design" data-balloon-pos="up">
+										Design is for today.
 									</div>
-									<div class="h-year" style="left:18%; animation-delay:0.48s">
-										<div class="h-year-title">2019</div> 
-									</div>
-									<div class="h-year" style="left:33%; animation-delay:0.48s">
-										<div class="h-year-title">2020</div> 
-									</div>
-									<div class="h-year" style="left:48%; animation-delay:0.48s">
-										<div class="h-year-title">2021</div> 
-									</div>
-									<div class="h-year" style="left:63%; animation-delay:0.48s">
-										<div class="h-year-title">2022</div> 
-									</div>
-									<div class="h-year" style="left:78%; animation-delay:0.48s">
-										<div class="h-year-title">2023</div> 
-									</div>
-									</div>
+									<div class="h-desc"></div>
 								</div>
+								<div class="h-item y-h" style="left:33%; animation-delay:0.36s">
+									<div class="h-title" aria-label="Pick-up Service" data-balloon-pos="up">
+										Design is integrate.
+									</div>
+									<div class="h-desc"></div>
+								</div>
+								<div class="h-item y-l" style="left:48%; animation-delay:0.36s">
+									<div class="h-title" aria-label="Currently Working On" data-balloon-pos="up">
+										Design is nudge.
+									</div>
+									<div class="h-desc"></div>
+								</div>
+							</div>
+							<div class="h-axis"></div>
+							<div class="h-bottom">
+								<div class="h-year" style="left:3%; animation-delay:0.48s">
+									<div class="h-year-title">2018</div> 
+								</div>
+								<div class="h-year" style="left:18%; animation-delay:0.48s">
+									<div class="h-year-title">2019</div> 
+								</div>
+								<div class="h-year" style="left:33%; animation-delay:0.48s">
+									<div class="h-year-title">2020</div> 
+								</div>
+								<div class="h-year" style="left:48%; animation-delay:0.48s">
+									<div class="h-year-title">2021</div> 
+								</div>
+								<div class="h-year" style="left:63%; animation-delay:0.48s">
+									<div class="h-year-title">2022</div> 
+								</div>
+								<div class="h-year" style="left:78%; animation-delay:0.48s">
+									<div class="h-year-title">2023</div> 
+								</div>
+							</div>
 						</div>
 					</div>
+
+
+					
 					<div class="summary projects">
 						<div class="inner">
 							<div class="product-container">
