--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 			<a class="skip-to-content-link" href="#main">
 				Skip to content!
-			  </a>
+			</a>
 			  
 			<!-- mobile hamburgerbar  -->
 			<div class="topnav">
@@ -58,18 +58,19 @@
 				<a class="icon" onclick="myFunction()">
 				  <i class="fa fa-bars"></i>
 				</a>
-			  </div>
-<script>
-	function myFunction() {
-		var x = document.getElementById("myLinks");
-  		if (x.style.display === "block") {
-    		x.style.display = "none";
-  			} 
-  		else {
-    		x.style.display = "block";
- 			 }
-	}
-</script>
+			</div>
+
+			<script>
+				function myFunction() {
+					var x = document.getElementById("myLinks");
+					if (x.style.display === "block") {
+						x.style.display = "none";
+						} 
+					else {
+						x.style.display = "block";
+						}
+				}
+			</script>
 
 
 
@@ -168,21 +169,18 @@
 					</div>
 
 
-					
-					<div class="summary projects">
-						<div class="inner">
-							<div class="product-container">
-								<div id="TCL_Cover"><a href="TCL.html"><img src="imgs/TCL_Cover.png" alt="TCL_Cover"></a></div>
-								<div id="Jewelry_Cover"><a href="Jewelry.html"><img src="imgs/Jewelry_Cover.png" alt="Jewelry_Cover"></a></div>
-								<div id="Badge_Cover"><a href="Badge.html"><img src="imgs/Badge_Cover.jpg" alt="Badge_Cover"></a></div>
-								<div id="CU_Cover"><a href="CU.html"><img src="imgs/CU_Cover.png" alt="CU_Cover"></a></div>
-							</div>
 
+					<div class="projects">
+						<div class="product-container">
+							<div id="TCL_Cover"><a href="TCL.html"><img src="imgs/TCL_Cover.png" alt="TCL_Cover"></a></div>
+							<div id="Jewelry_Cover"><a href="Jewelry.html"><img src="imgs/Jewelry_Cover.png" alt="Jewelry_Cover"></a></div>
+							<div id="Badge_Cover"><a href="Badge.html"><img src="imgs/Badge_Cover.jpg" alt="Badge_Cover"></a></div>
+							<div id="CU_Cover"><a href="CU.html"><img src="imgs/CU_Cover.png" alt="CU_Cover"></a></div>
 						</div>
 					</div>
 				</div>
 			</div>		
-	
+		</div>
 	</main>
 	<footer class="footer">
 		<div class="inner-section inner-footer">
