--- a/index.html
+++ b/index.html
@@ -171,12 +171,14 @@
 
 
 					<div class="projects">
-						<div class="product-container">
+						<h2>Projects Gallery Under Construction 🛠️</h2>
+						<p>Expected to be completed on Feb.20</p>
+						<!-- <div class="product-container">
 							<div id="TCL_Cover"><a href="TCL.html"><img src="imgs/TCL_Cover.png" alt="TCL_Cover"></a></div>
 							<div id="Jewelry_Cover"><a href="Jewelry.html"><img src="imgs/Jewelry_Cover.png" alt="Jewelry_Cover"></a></div>
 							<div id="Badge_Cover"><a href="Badge.html"><img src="imgs/Badge_Cover.jpg" alt="Badge_Cover"></a></div>
 							<div id="CU_Cover"><a href="CU.html"><img src="imgs/CU_Cover.png" alt="CU_Cover"></a></div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>		
