--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
-	gtag('config', 'G-EQPRP1PKE2');
+	gtag('config', 'G-L06V1TJE9T');
 	</script>
 
 	<title>Claudius' Portfolio</title>
