--- a/CU.html
+++ b/CU.html
@@ -21,13 +21,12 @@
 
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-EQPRP1PKE2"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-L06V1TJE9T"></script>
 	<script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
-
-	gtag('config', 'G-EQPRP1PKE2');
+	gtag('config', 'G-L06V1TJE9T');
 	</script>
 
 	<title>Pick-up Service</title>
