--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 					<div class="projects">
 						<h2>Projects Gallery Under Construction 🛠️</h2>
-						<p>Expected to be completed on Feb.20</p>
+						<p>Expected to complete on Feb.20</p>
 						<!-- <div class="product-container">
 							<div id="TCL_Cover"><a href="TCL.html"><img src="imgs/TCL_Cover.png" alt="TCL_Cover"></a></div>
 							<div id="Jewelry_Cover"><a href="Jewelry.html"><img src="imgs/Jewelry_Cover.png" alt="Jewelry_Cover"></a></div>
