--- a/Jewelry.html
+++ b/Jewelry.html
@@ -181,7 +181,7 @@
 
 
 	<footer class="footer">
-		<div class="inner-section inner-footer">
+		<div class="inner-footer">
 			@2022 Chuxuan(Claudius) Ma
 		</div>
 	</footer>
