--- a/TCL.html
+++ b/TCL.html
@@ -166,7 +166,7 @@
 		</div>
 	</main>
 	<footer class="footer">
-		<div class="inner-section inner-footer">
+		<div class="inner-footer">
 			@2022 Chuxuan(Claudius) Ma
 		</div>
 	</footer>
