--- a/CU.html
+++ b/CU.html
@@ -58,152 +58,48 @@
 				  <i class="fa fa-bars"></i>
 				</a>
 			  </div>
-<script>
-	function myFunction() {
-		var x = document.getElementById("myLinks");
-  		if (x.style.display === "block") {
-    		x.style.display = "none";
-  			} 
-  		else {
-    		x.style.display = "block";
- 			 }
-	}
-</script>
+		<script>
+			function myFunction() {
+				var x = document.getElementById("myLinks");
+				if (x.style.display === "block") {
+					x.style.display = "none";
+					} 
+				else {
+					x.style.display = "block";
+					}
+			}
+		</script>
 
 
-
-
-
-			<header class="header">
-				<div class="inner">
-					<div class="photo">
-						<a href="index.html" aria-label=" Keep Smiling Claudius 😃 " data-balloon-pos="down" >
-							<img src="imgs/My_photo.png" alt="Me">
-						</a>
-					</div>
-					<div class="My_Intro">
-						I am Chuxuan(Claudius) Ma, a multidisciplinary designer.
-					</div>
-					<div class="nav">
-						<ul>
-							<li class="nav_label">About Me</li>
-							<li class="side_link"><a  href = "index.html">故事&nbsp;My Story</a></li>
-							<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
-							<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
-	
-							<li class="nav_label">Past Work</li>
-							<li class="side_link"><a  class="current" href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pick-up Service</a></li>
-							<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
-							<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
-							<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
-						</ul>
-	
-					</div>
-				</div>
-			</header>
-			<div  id = "main" class="section content">
-				<div class="inner">
-					<article class="item page-item">
-						<div class="inner">
-							<div class="item-main">
-								<div class="item-desc text">
-									<h1>Airport Pick-up Service</h1>
-									<div class="summary overall">
-										<div class="inner">
-											<div class="summary-desc">
-												<h2>Context</h2>
-												<div class= "word_word">
-													<p>
-														During the time I studied at UC Riverside,  I came up with the hypothesis that design is a “nudge”, which means to guide, but this was difficult to see because of the restraints from business and technology.  However, I was determined to test my hypothesis. I volunteered in the Chinese Union as a product manager and UX designer, which meant I was given the opportunity and the capacity to combine business, technology, and design.
-													</p>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="summary overall">
-										<div class="inner">
-											<div class="summary-desc">
-												<h2>Project Brief</h2>
-												<div class= "word_word">
-													<p>ChineseUnion is a student organization which aims to support all international students. In this project, we focus on providing newly arrived students with developed pickup service and derivative services, such as card-issuing service, and hotel service.</p>
-													<br>
-													<p>Time: July 2019 - Sep 2019</p>
-													<br>
-													<p>Roles: Product Manager and UX Designer</p>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="summary overall">
-										<div class="inner">
-											<div class="summary-desc">
-												<h2>My contribution</h2>
-												<div class= "word_word">
-													<p>
-														1. Define problems and integrate business goal with user needs<br>
-														2. Organize and led multiple user research and conduct user experience design<br>
-														3. Build up and lead the cross functional team<br>
-													</p>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="summary overall">
-										<div class="inner">
-											<div class="summary-desc">
-												<h2>Problem</h2>
-												<div class= "word_word">
-													<p>
-														In 2019, there were 369,548 Chinese students who came to the U.S. pursuing higher education. The first challenge they faced is the feeling of helplessness and strangeness in the airport because they were not familiar with local ways of doing business.
-													</p>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="summary overall">
-										<div class="inner">
-											<div class="summary-desc">
-												<h2>Research</h2>
-												<div class= "word_word">
-													<p>Based on our 6 years pickup experience and direct observation, we have found that a number of students have difficulty finding the way to the meeting area. What’s more is that, based on our contextual inquiry with a lot of students, the result shows that International students have two or more baggage items, which are burdensome and bulky. This was especially a big challenge to most female respondents. </p>
-													<br>
-													<p>During my phone interview with 16 interviewees, 9 interviewees reported that they felt nervous during the process especially before they passed customs. Only 3 of 16 were confident in speaking English to strangers.</p>
-													<br>
-													<p>We also brainstormed during meetings and found that most students are only children, and their parents worry when their children go abroad. So, students are used to contacting their parents immediately after arriving.</p>	
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="summary overall">
-										<div class="inner">
-											<div class="summary-desc">
-												<h2>How it works</h2>
-												<div class= "img1">
-													<img src="imgs/CU_flow.png" alt="Wireframe">
-												</div>
-											</div>
-										</div>
-									</div>
-									<!-- Challenges continue here-->
-
-
-
-
-
-
-									
-
-
-								</div>
-							</div>
-						</div>
-					</article>
-				</div>
+		<header class="header">
+			<div class="photo">
+				<a href="index.html" aria-label=" Keep Smiling Claudius 😃 " data-balloon-pos="down" >
+					<img src="imgs/My_photo.png" alt="Me">
+				</a>
 			</div>
-		</div>
+			<div class="My_Intro">
+				<p>I am Chuxuan(Claudius) Ma</p>
+				<p>a multidisciplinary designer.</p>
+			</div>
+			<div class="nav">
+				<ul>
+					<li class="nav_label">About Me</li>
+					<li class="side_link"><a  href = "index.html">故事&nbsp;My Story</a></li>
+					<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
+					<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
+
+					<li class="nav_label">Past Work</li>
+					<li class="side_link"><a  class="current" href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
+					<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
+					<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
+					<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
+				</ul>
+			</div>	
+		</header>
+			
 	</main>
 	<footer class="footer">
-		<div class="inner-section inner-footer">
+		<div class="inner-footer">
 			@2022 Chuxuan(Claudius) Ma
 		</div>
 	</footer>
