--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 	
 	<main>
 		<div class="main">
-
 			<a class="skip-to-content-link" href="#main">
 				Skip to content!
 			</a>
@@ -59,18 +58,18 @@
 				  <i class="fa fa-bars"></i>
 				</a>
 			</div>
-
-			<script>
-				function myFunction() {
-					var x = document.getElementById("myLinks");
-					if (x.style.display === "block") {
-						x.style.display = "none";
-						} 
-					else {
-						x.style.display = "block";
-						}
-				}
-			</script>
+		</div>
+		<script>
+			function myFunction() {
+				var x = document.getElementById("myLinks");
+				if (x.style.display === "block") {
+					x.style.display = "none";
+					} 
+				else {
+					x.style.display = "block";
+					}
+			}
+		</script>
 
 
 
