picup service working

--- a/CU.html
+++ b/CU.html
@@ -100,6 +100,25 @@
 	<main>
 		<div class="project">
 			<h1>Airport Pickup Service</h1>
+			<div class = "textsolo">
+				<h2>Project Brief</h2>
+				<p>ChineseUnion is a nonprofit organization which aims to support all international students.
+				In this project, we focus on providing newly arrived students with well-developed pickup service and derivative services, such as card-issuing service, and hotel service.</p>
+				<br>
+				<p>Time: July 2019 - Sep 2019 &nbsp; Roles: Product Manager and UX Designer</p>
+			</div>
+			<div class = "textsolo">
+				<h2>My Contribution</h2>
+				<p>1. Define problems and integrate business goal with user needs</p>
+				<p>2. Organize and led multiple user research and conduct user experience design</p>
+				<p>3. Build up and lead the cross functional team</p>
+			</div>
+			<div class = "img textsolo">
+				<h2>How It Works</h2>
+				<img src="imgs/CU_flow.png" alt = "User Flow">
+			</div>
+			
+
 		</div>
 
 
