--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		<div class="overview">
 
 			<h1>My Story</h1>
-			<div class="summary">
+			<div class="textsolo">
 				<p>
 					I am obsessed with experimentation. My friends say I am always coming up with hypotheses-even about our daily lives and relationships. This serves me well as a product person, because I always come up with a question and find the solution through experimentation. 
 				</p>
