visual problem style

--- a/CU.html
+++ b/CU.html
@@ -97,8 +97,13 @@
 			</ul>
 		</div>	
 	</header>
+	<div class = "problem-demo">
+		<p>Visualizing the problem.<br> Under Construction, expected to see it on March</p>
+				
+	</div>
 	<main>
 		<div class="project">
+			
 			<h1>Airport Pickup Service</h1>
 			<div class = "textsolo">
 				<h2>Project Brief</h2>
@@ -108,7 +113,7 @@
 				<p>Time: July 2019 - Sep 2019 &nbsp; Roles: Product Manager and UX Designer</p>
 			</div>
 			<div class = "textsolo">
-				<h2>My Contribution</h2>
+				<h2>Key Contribution</h2>
 				<p>1. Define problems and integrate business goal with user needs</p>
 				<p>2. Organize and led multiple user research and conduct user experience design</p>
 				<p>3. Build up and lead the cross functional team</p>
@@ -165,7 +170,9 @@
 			<div class="textsolo">
 				<h2>Posts about the project</h2>
 				<a href="https://www.chineseunion.org/%e6%8e%a5%e6%9c%ba%e6%9c%8d%e5%8a%a1-2/">Peace of Mind Programme: Pick-up service</a>
+				<br>
 				<a href="https://mp.weixin.qq.com/s/f9bMJGTllWqdJld_r8s1Kg">全新VITA会员计划及微信小程序 震撼发布</a>
+				<br>
 				<a href="https://mp.weixin.qq.com/s/NGSRut3zqZQtKVMVIWzYVA">CU | 中秋接机,带你回家</a>
 			</div>
 
