--- a/CU.html
+++ b/CU.html
@@ -97,14 +97,20 @@
 			</ul>
 		</div>	
 	</header>
+
 	<div class = "problem-demo">
 		<p>Visualizing the problem.<br> Under Construction, expected to see it on March</p>
 				
 	</div>
+
 	<main>
 		<div class="project">
-			
-			<h1>Airport Pickup Service</h1>
+
+			<div class ="textsolo">
+				<h2>Problem</h2>
+				<p>In 2019, there were 369,548 Chinese students who came to the U.S. pursuing higher education. The first challenge they faced is the feeling of helplessness and strangeness in the airport because they were not familiar with local ways of doing business.</p>
+			</div>
+
 			<div class = "textsolo">
 				<h2>Project Brief</h2>
 				<p>ChineseUnion is a nonprofit organization which aims to support all international students.
@@ -112,28 +118,24 @@
 				<br>
 				<p>Time: July 2019 - Sep 2019 &nbsp; Roles: Product Manager and UX Designer</p>
 			</div>
-			<div class = "textsolo">
-				<h2>Key Contribution</h2>
-				<p>1. Define problems and integrate business goal with user needs</p>
-				<p>2. Organize and led multiple user research and conduct user experience design</p>
-				<p>3. Build up and lead the cross functional team</p>
+
+			<div class = "textsolo video">
+				<h2>MVP</h2>
+				<video width="auto" height="320" autoplay muted>
+					<source src="CU/mvp_video.mp4" type="video/mp4">
+				</video>
+
 			</div>
-			<div class = "img video textsolo">
-				<h2>How It Works</h2>
-				<img src="imgs/CU_flow.png" alt = "User Flow">
-			</div>
-			<div class ="textsolo">
-				<h2>Problem</h2>
-				<p>In 2019, there were 369,548 Chinese students who came to the U.S. pursuing higher education. The first challenge they faced is the feeling of helplessness and strangeness in the airport because they were not familiar with local ways of doing business.</p>
-			</div>
+
 			<div class="textsolo">
 				<h2>Research</h2>
 				<p>Based on our 6 years pickup experience and direct observation, we have found that a number of students have difficulty finding the way to the meeting area. What’s more is that, based on our contextual inquiry with a lot of students, the result shows that International students have two or more baggage items, which are burdensome and bulky. This was especially a big challenge to most female respondents. </p>
 				<p>During my phone interview with 16 interviewees, 9 interviewees reported that they felt nervous during the process especially before they passed customs. Only 3 of 16 were confident in speaking English to strangers.</p>
 				<p>We also brainstormed during meetings and found that most students are only children, and their parents worry when their children go abroad. So, students are used to contacting their parents immediately after arriving.</p>
 			</div>
+
 			<div class="img video textsolo">
-				<h2>Challenges</h2>
+				<h2>Pain Points</h2>
 				<h3>Navigation difficulty</h3>
 				<p>In order to resolve the problem of students getting lost, we developed a map navigation function for use in the airport. Students could find out where to meet the bus and when the bus would depart. We coordinated our volunteers to receive the newly arrived students outside the airport and helped them carry their luggage.</p>
 				<img>
@@ -148,10 +150,17 @@
 				<img>
 			</div>
 
-			<div class="img video textsolo">
+			<div class="textsolo">
+				<h2>Challenges</h2>
+				<h2>1</h2>
 				<h2>Integrate business into human-centered design</h2>
 				<p>Newly arrived students often need to stay in a hotel for a few days when they first arrive at the school because college or school dormitories do not offer immediate check-in upon arrival. These students also need to get cell phone access and bank services in new countries. As a product manager, I hope to integrate commercial interests and human-centered design. I proposed a one-stop service to integrate the hotel service in cooperation with local hotels and the card-issuing service in cooperation with AT&T and Chase on Banner. This not only improves the conversion rate of users, but also allows our team to get more sponsorships. All of this also helps the freshmen get up to speed in adapting to a new way of life.</p>
+				<img src="CU/3_services.png" alt="de">
+				<h2>2</h2>
+				<h2>Server Latency</h2>
+				<p>under-construction</p>
 				<img>
+
 			</div>
 
 			<div class ="textsolo">
@@ -167,6 +176,13 @@
 				<p>I should try to balance task oriented style with people oriented style, because it can help the team go long instead of go fast. </p>
 			</div>
 
+			<div class = "textsolo">
+				<h2>Key Contribution</h2>
+				<p>1. Define problems and integrate business goal with user needs</p>
+				<p>2. Organize and led multiple user research and conduct user experience design</p>
+				<p>3. Build up and lead the cross functional team</p>
+			</div>
+
 			<div class="textsolo">
 				<h2>Posts about the project</h2>
 				<a href="https://www.chineseunion.org/%e6%8e%a5%e6%9c%ba%e6%9c%8d%e5%8a%a1-2/">Peace of Mind Programme: Pick-up service</a>
@@ -175,7 +191,6 @@
 				<br>
 				<a href="https://mp.weixin.qq.com/s/NGSRut3zqZQtKVMVIWzYVA">CU | 中秋接机,带你回家</a>
 			</div>
-
 		</div>
 
 
