--- a/CU.html
+++ b/CU.html
@@ -121,9 +121,10 @@
 
 			<div class = "textsolo video">
 				<h2>MVP</h2>
-				<video width="auto" height="320" autoplay muted>
+				<video width="auto" height="500px" autoplay muted controls loop>
 					<source src="CU/mvp_video.mp4" type="video/mp4">
 				</video>
+				<img src="imgs/CU_flow.png" alt="flow">
 
 			</div>
 
@@ -134,7 +135,7 @@
 				<p>We also brainstormed during meetings and found that most students are only children, and their parents worry when their children go abroad. So, students are used to contacting their parents immediately after arriving.</p>
 			</div>
 
-			<div class="img video textsolo">
+			<div class="textsolo">
 				<h2>Pain Points</h2>
 				<h3>Navigation difficulty</h3>
 				<p>In order to resolve the problem of students getting lost, we developed a map navigation function for use in the airport. Students could find out where to meet the bus and when the bus would depart. We coordinated our volunteers to receive the newly arrived students outside the airport and helped them carry their luggage.</p>
