--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				</p>
 				<br>
 				<p>
-					The products I made are generally incubated in the process of testing hypotheses, and the answers to my question are presented by the work I made during the process of inquiry. In the past five years I have asked two questions, made three hypotheses, and have made real impacts on my community. 
+					The products I made are generally incubated in the process of testing hypotheses, and the answers to my question are presented by the work I made during the process of inquiry. In the past five years, I tested three hypotheses, and delivered four meaningful products which made a real impact in our community. Now, my focus is on Nudge, and I wish I can help people make better choices in their life. 
 				</p>
 			</div>
 
