Finished the first block

--- a/CU.html
+++ b/CU.html
@@ -105,21 +105,21 @@
 
 	<main>
 		<div class="project">
-
-			<div class ="textsolo">
-				<h2>Problem</h2>
-				<p>In 2019, there were 369,548 Chinese students who came to the U.S. pursuing higher education. The first challenge they faced is the feeling of helplessness and strangeness in the airport because they were not familiar with local ways of doing business.</p>
+			<div class = "twotext block">
+				<div class="t1">
+					<h2>Product</h2>
+					<p>Launched in Sep 2019, Vita Pick-up Service is an mini-app that help international students navigate inside airport.</p>
+				</div>
+				<div class="t2">
+					<h2>Team</h2>
+					<p>
+						Product Manger & UX: Chuxuan Ma<br>
+						Engineers: Peter, Hao Sun, Anzhe Li<br>
+						Executives: Peng Zhang, Yuanzhe Li, Tianyi Li</p>
+				</div>
 			</div>
 
-			<div class = "textsolo">
-				<h2>Project Brief</h2>
-				<p>ChineseUnion is a nonprofit organization which aims to support all international students.
-				In this project, we focus on providing newly arrived students with well-developed pickup service and derivative services, such as card-issuing service, and hotel service.</p>
-				<br>
-				<p>Time: July 2019 - Sep 2019 &nbsp; Roles: Product Manager and UX Designer</p>
-			</div>
-
-			<div class = "textsolo video">
+			<div class = "block video">
 				<h2>MVP</h2>
 				<video width="auto" height="500px" autoplay muted controls loop>
 					<source src="CU/mvp_video.mp4" type="video/mp4">
@@ -128,14 +128,29 @@
 
 			</div>
 
-			<div class="textsolo">
+			<div class ="block">
+				<h2>Problem</h2>
+				<p>In 2019, there were 369,548 Chinese students who came to the U.S. pursuing higher education. The first challenge they faced is the feeling of helplessness and strangeness in the airport because they were not familiar with local ways of doing business.</p>
+			</div>
+
+			<div class = "block">
+				<h2>Project Brief</h2>
+				<p>ChineseUnion is a nonprofit organization which aims to support all international students.
+				In this project, we focus on providing newly arrived students with well-developed pickup service and derivative services, such as card-issuing service, and hotel service.</p>
+				<br>
+				<p>Time: July 2019 - Sep 2019 &nbsp; Roles: Product Manager and UX Designer</p>
+			</div>
+
+
+
+			<div class="block">
 				<h2>Research</h2>
 				<p>Based on our 6 years pickup experience and direct observation, we have found that a number of students have difficulty finding the way to the meeting area. What’s more is that, based on our contextual inquiry with a lot of students, the result shows that International students have two or more baggage items, which are burdensome and bulky. This was especially a big challenge to most female respondents. </p>
 				<p>During my phone interview with 16 interviewees, 9 interviewees reported that they felt nervous during the process especially before they passed customs. Only 3 of 16 were confident in speaking English to strangers.</p>
 				<p>We also brainstormed during meetings and found that most students are only children, and their parents worry when their children go abroad. So, students are used to contacting their parents immediately after arriving.</p>
 			</div>
 
-			<div class="textsolo">
+			<div class="block">
 				<h2>Pain Points</h2>
 				<h3>Navigation difficulty</h3>
 				<p>In order to resolve the problem of students getting lost, we developed a map navigation function for use in the airport. Students could find out where to meet the bus and when the bus would depart. We coordinated our volunteers to receive the newly arrived students outside the airport and helped them carry their luggage.</p>
@@ -151,7 +166,7 @@
 				<img>
 			</div>
 
-			<div class="textsolo">
+			<div class="block">
 				<h2>Challenges</h2>
 				<h2>1</h2>
 				<h2>Integrate business into human-centered design</h2>
@@ -164,27 +179,27 @@
 
 			</div>
 
-			<div class ="textsolo">
+			<div class ="block">
 				<h2>Next Steps</h2>
 				<p>This project was postponed in 2020 because of the COVID-19. If I were to continue leading the team, I would prioritize the integration of pick-up service, card-issuing service, and hotel service, because it is these three services that builds up the newly arrived students' experience, and this integration is expected to lift up our profit level, we will have more fund operating the organization. </p>
 				<p>In addition, we generally have a high user adoption rate because of our Wechat public account, which gives us a good opportunity to conduct data analysis. But because of COVID-19, we haven’t gotten enough data on the pick-service page. I would build a funnel model to analyze our users and further develop the application if I had more data reports.</p>
 			</div>
 
-			<div class ="textsolo">
+			<div class ="block">
 				<h2>Takeaways</h2>
 				<p>I should build a collaborative atmosphere for the team, so that we can maintain our team conflict on a balanced level. </p>
 				<p>Macro management can really help the team achieve goals, because instead of constantly checking the progress with the team, I went to the team member and just asked,” How’s it going? Is there anything I can do to help?” Team members had more self motivation and we built a stronger connection. </p>
 				<p>I should try to balance task oriented style with people oriented style, because it can help the team go long instead of go fast. </p>
 			</div>
 
-			<div class = "textsolo">
+			<div class = "block">
 				<h2>Key Contribution</h2>
 				<p>1. Define problems and integrate business goal with user needs</p>
 				<p>2. Organize and led multiple user research and conduct user experience design</p>
 				<p>3. Build up and lead the cross functional team</p>
 			</div>
 
-			<div class="textsolo">
+			<div class="block">
 				<h2>Posts about the project</h2>
 				<a href="https://www.chineseunion.org/%e6%8e%a5%e6%9c%ba%e6%9c%8d%e5%8a%a1-2/">Peace of Mind Programme: Pick-up service</a>
 				<br>
