--- a/TCL.html
+++ b/TCL.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<meta name="author" content="Chuxuan Claudius Ma">
-	<meta name="description" content="A Design Portfolio that records Claudius' past work and also his passion on social change.">
-	<meta name="theme-color" content="#D05A6E">
+		<meta name="author" content="Chuxuan Claudius Ma">
+		<meta name="description" content="A Design Portfolio that records Claudius' past work and also his passion on social change.">
+		<meta name="theme-color" content="#D05A6E">
 
-	<link rel="icon" href="imgs/favicon.ico">
-	<!-- 16 32 96 & apple touch need to be updated-->
+		<link rel="icon" href="imgs/favicon.ico">
+		<!-- 16 32 96 & apple touch need to be updated-->
 
-	<link rel="stylesheet" href="css/html5reset.css">
-	<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/html5reset.css">
+		<link rel="stylesheet" href="css/style.css">
 
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="css/balloon.min.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="css/balloon.min.css">
 
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-L06V1TJE9T"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'G-L06V1TJE9T');
-	</script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L06V1TJE9T"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'G-L06V1TJE9T');
+		</script>
 
 
-	<title>Smart TV</title>
-</head>
+		<title>Smart TV</title>
+	</head>
 
-<body>
+	<body>
+	</body>
 	<div class="mask mt"></div>
 	<div class="mask mb"></div>
 	<div class="mask ml"></div>
@@ -170,6 +171,7 @@
 			@2022 Chuxuan(Claudius) Ma
 		</div>
 	</footer>
+	<
 </html>
 
 
