--- a/CU.html
+++ b/CU.html
@@ -105,7 +105,9 @@
 
 		<main>
 			<div class="project">
+				<!-- <h1>CU Vita Pick-up Service</h1> -->
 				<div class = "twotext block">
+					
 					<div class="t1">
 						<h2>Product</h2>
 						<p>Launched in Sep 2019, Vita Pick-up Service is an mini-app that help international students navigate inside airport.</p>
@@ -130,24 +132,24 @@
 
 				<div class ="block">
 					<h2>Problem</h2>
-					<p>In 2019, there were 369,548 Chinese students who came to the U.S. pursuing higher education. The first challenge they faced is the feeling of helplessness and strangeness in the airport because they were not familiar with local ways of doing business.</p>
+					<p>In 2019, there were 369,548 Chinese students who came to the U.S. pursuing higher education. 
+						The first challenge they faced is the feeling of helplessness and strangeness in the airport because they were not familiar with local ways of doing business.
+						Based on our 6 years pickup experience and direct observation, we have found that a number of students have difficulty finding the way to the meeting area.
+					</p>
 				</div>
-
-				<div class = "block">
-					<h2>Project Brief</h2>
-					<p>ChineseUnion is a nonprofit organization which aims to support all international students.
-					In this project, we focus on providing newly arrived students with well-developed pickup service and derivative services, such as card-issuing service, and hotel service.</p>
-					<br>
-					<p>Time: July 2019 - Sep 2019 &nbsp; Roles: Product Manager and UX Designer</p>
-				</div>
-
-
 
 				<div class="block">
 					<h2>Research</h2>
-					<p>Based on our 6 years pickup experience and direct observation, we have found that a number of students have difficulty finding the way to the meeting area. What’s more is that, based on our contextual inquiry with a lot of students, the result shows that International students have two or more baggage items, which are burdensome and bulky. This was especially a big challenge to most female respondents. </p>
-					<p>During my phone interview with 16 interviewees, 9 interviewees reported that they felt nervous during the process especially before they passed customs. Only 3 of 16 were confident in speaking English to strangers.</p>
-					<p>We also brainstormed during meetings and found that most students are only children, and their parents worry when their children go abroad. So, students are used to contacting their parents immediately after arriving.</p>
+					<ul>
+						<li>Based on our contextual inquiry with a lot of students, the result shows that International students have two or more baggage items, which are burdensome and bulky. This was especially a big challenge to most female informants. </li>
+						<li>During my phone interview with 16 interviewees, 9 interviewees reported that they felt nervous during the process especially before they passed customs. Only 3 of 16 were confident in speaking English to strangers.</li>
+						<li>We also brainstormed during meetings and found that most students are only children, and their parents worry when their children go abroad. So, students are used to contacting their parents immediately after arriving.</li>
+					</ul>
+					<div class="image">
+						<img src="CU/R1.jpg" alt="Research Photo1">
+						<img src="CU/R2.jpg" alt="Research Photo2">
+						<img src="CU/R3.jpg" alt="Research Photo3">
+					</div>
 				</div>
 
 				<div class="block">
