bug fix and polaroid

--- a/CU.html
+++ b/CU.html
@@ -146,9 +146,24 @@
 						<li>We also brainstormed during meetings and found that most students are only children, and their parents worry when their children go abroad. So, students are used to contacting their parents immediately after arriving.</li>
 					</ul>
 					<div class="image">
-						<img src="CU/R1.jpg" alt="Research Photo1">
-						<img src="CU/R2.jpg" alt="Research Photo2">
-						<img src="CU/R3.jpg" alt="Research Photo3">
+						<div class="polaroid">
+							<img src="CU/R1.jpg" alt="Research Photo1">
+							<div class="polartext">
+								<p>Cinque Terre</p>
+							</div>
+						</div>
+						<div class="polaroid">
+							<img src="CU/R2.jpg" alt="Research Photo2">
+							<div class="polartext">
+								<p>Cinque Terre</p>
+							</div>
+						</div>
+						<div class="polaroid">
+							<img src="CU/R3.jpg" alt="Research Photo3">
+							<div class="polartext">
+								<p>Cinque Terre</p>
+							</div>
+						</div>
 					</div>
 				</div>
 
