change it to ol

--- a/CU.html
+++ b/CU.html
@@ -145,27 +145,27 @@
 						<div class="polaroid">
 							<img src="CU/R1.jpg" alt="Research Photo1">
 							<div class="polartext">
-								<p>Burdensome luggage</p>
+								<p>1. Burdensome luggage</p>
 							</div>
 						</div>
 						<div class="polaroid">
 							<img src="CU/R2.jpg" alt="Research Photo2">
 							<div class="polartext">
-								<p>Feeling of nervous</p>
+								<p>2. Feeling of nervous</p>
 							</div>
 						</div>
 						<div class="polaroid">
 							<img src="CU/R3.jpg" alt="Research Photo3">
 							<div class="polartext">
-								<p>Hard to say goodbye</p>
+								<p>3. Hard to say goodbye</p>
 							</div>
 						</div>
 					</div>
-					<ul>
+					<ol>
 						<li>Based on our contextual inquiry with a lot of students, the result shows that International students have two or more baggage items, which are burdensome and bulky. This was especially a big challenge to most female informants. </li>
 						<li>During my phone interview with 16 interviewees, 9 interviewees reported that they felt nervous during the process especially before they passed customs. Only 3 of 16 were confident in speaking English to strangers.</li>
 						<li>We also brainstormed during meetings and found that most students are only children, and their parents worry when their children go abroad. So, students are used to contacting their parents immediately after arriving.</li>
-					</ul>
+					</ol>
 				</div>
 
 				<div class="block">
