polaroid effect on pic

--- a/CU.html
+++ b/CU.html
@@ -143,19 +143,19 @@
 					
 					<div class="image">
 						<div class="polaroid">
-							<img src="CU/R1.jpg" alt="Research Photo1">
+							<img src="CU/R1.png" alt="Research Photo1">
 							<div class="polartext">
 								<p>1. Burdensome luggage</p>
 							</div>
 						</div>
 						<div class="polaroid">
-							<img src="CU/R2.jpg" alt="Research Photo2">
+							<img src="CU/R2.png" alt="Research Photo2">
 							<div class="polartext">
 								<p>2. Feeling of nervous</p>
 							</div>
 						</div>
 						<div class="polaroid">
-							<img src="CU/R3.jpg" alt="Research Photo3">
+							<img src="CU/R3.png" alt="Research Photo3">
 							<div class="polartext">
 								<p>3. Hard to say goodbye</p>
 							</div>
